--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="estilo/stylo.css">
   <title>Projeto Social</title>
   <style>
-
+ ::-webkit-scrollbar{ width: 0px;
+  height: 0px;}
   </style>
 </head>
 <body>
@@ -16,7 +17,14 @@
 <section id="telefone"> 
 <iframe src="home.html"  name="tela" id="tela"  frameborder="0"></iframe>
 </section>
-<section id="redes sociais">
+<section id="redessociais">
+<a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt="Home">   </a><br>
+<a href="Artstation" target="tela"><img src="imagens/arts.jpg" alt=""> </a><br>
+<a href="GitHub" target="tela"><img src="imagens/logo-github.jpg" alt=""> </a><br>
+<a href="DeviantArt" target="tela"> <img src="imagens/devi.png" alt="DeviantArt">  </a><br>
+<a href="instagram.html" target="tela"> <img src="imagens/logo-instagram.jpg" alt=""></a><br>
+<a href="Youtube" target="tela"> <img src="imagens/logo-youtube.jpg" alt=""> </a><br>
+
 
 </section>
 
